benchmarks/pvbench/vuln/llvm/llvm-gh-137861/summary.txt
This is an LLVM error report. Please refer the error message for more details.

/testcases/llvm-gh-137861/input/poc.c:10:53: error: use of undeclared identifier 'cleanup1'
   10 | #pragma clang attribute push(__attribute__((cleanup(cleanup1))))
      |                                                     ^~~~~~~~
clang-21: /tmp/llvm-gh-137861/build/clang/lib/Parse/ParseStmt.cpp:131: clang::StmtResult clang::Parser::ParseStatementOrDeclaration(StmtVector&, ParsedStmtContext, clang::SourceLocation*): Assertion `(CXX11Attrs.empty() || Res.isInvalid() || Res.isUsable()) && "attributes on empty statement"' failed.
Stack dump:
0.	Program arguments: /tmp/llvm-gh-137861/build/build/bin/clang-21 -cc1 -triple x86_64-unknown-linux-gnu -emit-obj -dumpdir a- -disable-free -clear-ast-before-backend -main-file-name poc.c -mrelocation-model pic -pic-level 2 -pic-is-pie -mframe-pointer=all -fmath-errno -ffp-contract=on -fno-rounding-math -mconstructor-aliases -funwind-tables=2 -target-cpu x86-64 -tune-cpu generic -debugger-tuning=gdb -fdebug-compilation-dir=/tmp/llvm-gh-137861/build -fcoverage-compilation-dir=/tmp/llvm-gh-137861/build -resource-dir /tmp/llvm-gh-137861/build/build/lib/clang/21 -internal-isystem /tmp/llvm-gh-137861/build/build/lib/clang/21/include -internal-isystem /usr/local/include -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/13/../../../../x86_64-linux-gnu/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -ferror-limit 100 -fgnuc-version=4.2.1 -fskip-odr-check-in-gmf -faddrsig -D__GCC_HAVE_DWARF2_CFI_ASM=1 -o /tmp/poc-175eeb.o -x c /testcases/llvm-gh-137861/input/poc.c
1.	/testcases/llvm-gh-137861/input/poc.c:11:1: current parser token '{'
2.	/testcases/llvm-gh-137861/input/poc.c:5:11: parsing function body 'main'
3.	/testcases/llvm-gh-137861/input/poc.c:5:11: in compound statement ('{}')
    - llvm::sys::PrintStackTrace(llvm::raw_ostream&, int) llvm/lib/Support/Unix/Signals.inc:804:22
    - PrintStackTraceSignalHandler(void*) llvm/lib/Support/Unix/Signals.inc:880:1
    - llvm::sys::RunSignalHandlers() llvm/lib/Support/Signals.cpp:105:20
    - SignalHandler(int, siginfo_t*, void*) llvm/lib/Support/Unix/Signals.inc:418:13
    - clang::Parser::ParseStatementOrDeclaration(llvm::SmallVector<clang::Stmt*, 24u>&, clang::Parser::ParsedStmtContext, clang::SourceLocation*) clang/lib/Parse/ParseStmt.cpp:134:23
    - clang::Parser::ParseCompoundStatementBody(bool) clang/lib/Parse/ParseStmt.cpp:1265:38
    - clang::Parser::ParseFunctionStatementBody(clang::Decl*, clang::Parser::ParseScope&) clang/lib/Parse/ParseStmt.cpp:2586:47
    - clang::Parser::ParseFunctionDefinition(clang::ParsingDeclarator&, clang::Parser::ParsedTemplateInfo const&, clang::Parser::LateParsedAttrList*) clang/lib/Parse/Parser.cpp:1549:36
    - clang::Parser::ParseDeclGroup(clang::ParsingDeclSpec&, clang::DeclaratorContext, clang::ParsedAttributes&, clang::Parser::ParsedTemplateInfo&, clang::SourceLocation*, clang::Parser::ForRangeInit*) clang/lib/Parse/ParseDecl.cpp:2461:40
    - clang::Parser::ParseDeclOrFunctionDefInternal(clang::ParsedAttributes&, clang::ParsedAttributes&, clang::ParsingDeclSpec&, clang::AccessSpecifier) clang/lib/Parse/Parser.cpp:1273:24
    - clang::Parser::ParseDeclarationOrFunctionDefinition(clang::ParsedAttributes&, clang::ParsedAttributes&, clang::ParsingDeclSpec*, clang::AccessSpecifier) clang/lib/Parse/Parser.cpp:1295:42
    - clang::Parser::ParseExternalDeclaration(clang::ParsedAttributes&, clang::ParsedAttributes&, clang::ParsingDeclSpec*) clang/lib/Parse/Parser.cpp:1098:50
    - clang::Parser::ParseTopLevelDecl(clang::OpaquePtr<clang::DeclGroupRef>&, clang::Sema::ModuleImportState&) clang/lib/Parse/Parser.cpp:782:36
    - clang::ParseAST(clang::Sema&, bool, bool) clang/lib/Parse/ParseAST.cpp:171:37
    - clang::ASTFrontendAction::ExecuteAction() clang/lib/Frontend/FrontendAction.cpp:1343:11
    - clang::CodeGenAction::ExecuteAction() clang/lib/CodeGen/CodeGenAction.cpp:1112:5
    - clang::FrontendAction::Execute() clang/lib/Frontend/FrontendAction.cpp:1229:38
    - clang::CompilerInstance::ExecuteAction(clang::FrontendAction&) clang/lib/Frontend/CompilerInstance.cpp:1058:42
    - clang::ExecuteCompilerInvocation(clang::CompilerInstance*) clang/lib/FrontendTool/ExecuteCompilerInvocation.cpp:300:38
    - cc1_main(llvm::ArrayRef<char const*>, char const*, void*) clang/tools/driver/cc1_main.cpp:294:40
    - ExecuteCC1Tool(llvm::SmallVectorImpl<char const*>&, llvm::ToolContext const&) clang/tools/driver/driver.cpp:223:20
    - clang_main(int, char**, llvm::ToolContext const&) clang/tools/driver/driver.cpp:264:26
    - main build/tools/clang/tools/driver/clang-driver.cpp:17:20